# Email_Triage

./: .env.example  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_endpoints.py
baseline/: __init__.py  agent.py  q_agent.py  results.json  run_baseline.py  train_rl.py
data/: easy_emails.json  hard_emails.json  medium_emails.json
environment/: __init__.py  constants.py  env.py  state_manager.py
graders/: __init__.py  base_grader.py  llm_grader.py  rule_based.py
models/: __init__.py  action.py  observation.py  reward.py
server/: app.py
tasks/: __init__.py  easy.py  hard.py  medium.py
tests/: test_api.py  test_environment.py  test_graders.py  test_models.py  test_state_manager.py
utils/: helpers.py
